Update:hammer_and_wrench:

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>
                     We are going to add some motivational stuff here about our website.
                 </p>
-                <a href="courses.html" class="button button-primary"> Let's Get Started</a>
+                <a href="PHP/login.php" class="button button-primary"> Let's Get Started</a>
             </div>
 
             <div class="header__right">
@@ -106,11 +106,11 @@
 
 
 <section class="courses">
-    <h2>Our Famous Courses</h2>
+    <h2>Explore Our Courses</h2>
     <div class="container courses__container">
         <article class="course">
             <div class="course__image">
-                <img src="./images/X-Cart Web Development _ X-Cart Customization Solutions.jpeg">
+                <img src="./images/sales.jpeg">
             </div>
             <div class="course__info">
                 <h4>Affiliate Marketing</h4>
@@ -123,7 +123,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/Get this flat illustration of global languages.jpeg">
+                <img src="./images/language.jpeg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -136,7 +136,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/Web Development Illustration.jpeg">
+                <img src="./images/html.jpeg">
             </div>
             <div class="course__info">
                 <h4>Web Devlopment</h4>
@@ -261,8 +261,12 @@
 </footer>
 
 
+<!--script src="https://unpkg.com/swiper@7.4.1/swiper-bundle.min.js"></script>
+<script src="js/main.js"></script>-->
 
-
+<script>
+    //slides for transitions
+</script>
 <!--JAVASCRIPT LINK-->
 <script src='js/main.js'></script>
 
