--- a/courses.html
+++ b/courses.html
@@ -38,12 +38,32 @@
 </nav>
 <!--================ END OF NAVBAR ==============================-->
 
+<!--======== HEADER SECTION 1========-->
+<header>
+    <div class="container header__container">
+        <div class="header__left">
+            <h1>Learn anytime, Anywhere with ease.</h1>
+            <p>
+                We are going to add some motivational stuff here about our website.
+            </p>
+            <a href="login.php" class="button button-primary"> Let's Get Started</a>
+        </div>
+
+        <div class="header__right">
+            <div class="header__right-image">
+                <img src="./images/boy-and-girl.svg">
+            </div>
+        </div>
+    </div>
+</header>
+<!--=========== END OF HEADER 1-=================-->
+
 <section class="courses">
     <!--h2>Our Famous Courses</h2-->
     <div class="container courses__container">
         <article class="course">
             <div class="course__image">
-                <img src="./images/X-Cart Web Development _ X-Cart Customization Solutions.jpeg">
+                <img src="./images/sales.jpeg">
             </div>
             <div class="course__info">
                 <h4>Affiliate Marketing</h4>
@@ -56,7 +76,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/Get this flat illustration of global languages.jpeg">
+                <img src="./images/language.jpeg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -69,7 +89,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/Web Development Illustration.jpeg">
+                <img src="./images/html.jpeg">
             </div>
             <div class="course__info">
                 <h4>Web Devlopment</h4>
@@ -124,7 +144,7 @@
 </footer>
 
 <!--JAVASCRIPT LINK-->
-<!--script src='js/main.js'></script-->
+<script src='js/main.js'></script>
 
 </body>
 </html>
