Done :heavy_green_check:

--- a/courses.html
+++ b/courses.html
@@ -38,12 +38,13 @@
 </nav>
 <!--================ END OF NAVBAR ==============================-->
 
+
 <section class="courses">
     <!--h2>Our Famous Courses</h2-->
     <div class="container courses__container">
         <article class="course">
             <div class="course__image">
-                <img src="./images/X-Cart Web Development _ X-Cart Customization Solutions.jpeg">
+                <img src="./images/sales.jpeg">
             </div>
             <div class="course__info">
                 <h4>Affiliate Marketing</h4>
@@ -56,7 +57,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/Get this flat illustration of global languages.jpeg">
+                <img src="./images/global languages.jpeg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -69,7 +70,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/Web Development Illustration.jpeg">
+                <img src="./images/html.jpeg">
             </div>
             <div class="course__info">
                 <h4>Web Devlopment</h4>
@@ -79,6 +80,139 @@
             <a href="course.html" class="button button-primary"> Learn More</a>
             </div>
         </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/global languages.jpeg">
+            </div>
+            <div class="course__info">
+                <h4>Languages</h4>
+                <p>
+                Learn more than one Language! And even more!!!
+                </p>
+            <a href="course.html" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/global languages.jpeg">
+            </div>
+            <div class="course__info">
+                <h4>Languages</h4>
+                <p>
+                Learn more than one Language! And even more!!!
+                </p>
+            <a href="course.html" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/global languages.jpeg">
+            </div>
+            <div class="course__info">
+                <h4>Languages</h4>
+                <p>
+                Learn more than one Language! And even more!!!
+                </p>
+            <a href="course.html" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/global languages.jpeg">
+            </div>
+            <div class="course__info">
+                <h4>Languages</h4>
+                <p>
+                Learn more than one Language! And even more!!!
+                </p>
+            <a href="course.html" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/global languages.jpeg">
+            </div>
+            <div class="course__info">
+                <h4>Languages</h4>
+                <p>
+                Learn more than one Language! And even more!!!
+                </p>
+            <a href="course.html" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/global languages.jpeg">
+            </div>
+            <div class="course__info">
+                <h4>Languages</h4>
+                <p>
+                Learn more than one Language! And even more!!!
+                </p>
+            <a href="course.html" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/global languages.jpeg">
+            </div>
+            <div class="course__info">
+                <h4>Languages</h4>
+                <p>
+                Learn more than one Language! And even more!!!
+                </p>
+            <a href="course.html" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/global languages.jpeg">
+            </div>
+            <div class="course__info">
+                <h4>Languages</h4>
+                <p>
+                Learn more than one Language! And even more!!!
+                </p>
+            <a href="course.html" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/global languages.jpeg">
+            </div>
+            <div class="course__info">
+                <h4>Languages</h4>
+                <p>
+                Learn more than one Language! And even more!!!
+                </p>
+            <a href="course.html" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/global languages.jpeg">
+            </div>
+            <div class="course__info">
+                <h4>Languages</h4>
+                <p>
+                Learn more than one Language! And even more!!!
+                </p>
+            <a href="course.html" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        
+
     </div>
 </section>
 
@@ -124,7 +258,7 @@
 </footer>
 
 <!--JAVASCRIPT LINK-->
-<!--script src='js/main.js'></script-->
+<script src='js/main.js'></script>
 
 </body>
 </html>
