--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <div class="header__left">
                 <h1>Learn anytime, Anywhere with ease.</h1>
                 <p>
-                    We are going to add some motivational stuff here about our website.
+                    Elevate your learning experience with our dynamic e-learning platform. Fuel your growth and seize the opportunity to acquire valuable knowledge at your own pace. 
                 </p>
-                <a href="courses.html" class="button button-primary"> Let's Get Started</a>
+                <a href="PHP/login.php" class="button button-primary"> Let's Get Started</a>
             </div>
 
             <div class="header__right">
@@ -64,7 +64,7 @@
             <div class="categories__left">
                 <h1>Categories</h1>
                 <p>
-                    Another creative writing goes in here! I'm out of words!!
+                    Whether you're a beginner seeking to build a strong skill set or an experienced professional looking to expand your knowledge, our categories section provides a pathway to success in today's fast-paced world.
                 </p>
                 <a href="#" class="button">Learn More</a>
             </div>
@@ -73,44 +73,44 @@
                 <article class="category">
                     <span class="category__icon"><i class="uil uil-usd-circle"></i></span>
                     <h5>Finance</h5>
-                    <p>A paragraph describing the course offered on our website.</p>
+                    <p>Explore our comprehensive courses designed to equip you with the skills needed to navigate the complex financial landscape.</p>
                 </article>
 
                 <article class="category">
                     <span class="category__icon"><i class="uil uil-megaphone"></i></span>
                     <h5>Marketing</h5>
-                    <p>A paragraph describing the course offered on our website.</p>
+                    <p>Unleash your creative marketing prowess and master the art of strategic communication. </p>
                 </article>
 
                 <article class="category">
                     <span class="category__icon"><i class="uil uil-music"></i></span>
                     <h5>Music</h5>
-                    <p>A paragraph describing the course offered on our website.</p>
+                    <p>Ignite your passion for music and explore a harmonious journey of creativity and expression. From theory and composition to performance and production, our music courses cater to all skill levels.</p>
                 </article>
 
                 <article class="category">
                     <span class="category__icon"><i class="uil uil-html3"></i></span>
                     <h5>Web Development</h5>
-                    <p>A paragraph describing the course offered on our website.</p>
+                    <p>Gain the knowledge and skills to build stunning websites and dynamic web applications. From front-end design to back-end programming, our web development courses cover HTML, CSS, JavaScript, and more.</p>
                 </article>
 
                 <article class="category">
                     <span class="category__icon"><i class="uil uil-language"></i></span>
                     <h5>Languages</h5>
-                    <p>A paragraph describing the course offered on our website.</p>
+                    <p>Open the doors to a world of cultural diversity and global connections through our language courses.</p>
                 </article>
             </div>    
         </div>
     </section>
 <!--====================== END OF CATEGORIES SECTION=======================-->
 
-
+<!--====================== COURSES =============================================-->>
 <section class="courses">
-    <h2>Our Famous Courses</h2>
+    <h2>Explore Our Courses</h2>
     <div class="container courses__container">
         <article class="course">
             <div class="course__image">
-                <img src="./images/X-Cart Web Development _ X-Cart Customization Solutions.jpeg">
+                <img src="./images/sales.jpeg">
             </div>
             <div class="course__info">
                 <h4>Affiliate Marketing</h4>
@@ -123,7 +123,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/Get this flat illustration of global languages.jpeg">
+                <img src="./images/global languages.jpeg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -136,7 +136,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/Web Development Illustration.jpeg">
+                <img src="./images/html.jpeg">
             </div>
             <div class="course__info">
                 <h4>Web Devlopment</h4>
@@ -261,8 +261,12 @@
 </footer>
 
 
+<!--script src="https://unpkg.com/swiper@7.4.1/swiper-bundle.min.js"></script>
+<script src="js/main.js"></script>-->
 
-
+<script>
+    //slides for transitions
+</script>
 <!--JAVASCRIPT LINK-->
 <script src='js/main.js'></script>
 
