Done :heavy_green_check:

--- a/about.html
+++ b/about.html
@@ -43,6 +43,54 @@
     </div>
 </section>
 
+<section class="catogories">
+    <p>
+        <h2><!--Inspiration:-->
+            Our project is not just a culmination of technical skills, but a testament to the personal journeys that brought us together. It all began during our time at Holberton School, where we discovered a shared passion for innovation and problem-solving. The challenges we encountered and the knowledge we gained served as the fuel that ignited our desire to create something extraordinary.
+        </h2>
+    </p>
+    <p>
+        <h2>Timeline:
+            This project has been an ongoing endeavor, evolving and growing with each passing milestone. From the initial concept to the final implementation, we have dedicated countless hours to ensure its success. The journey has been challenging, yet immensely rewarding, pushing us to explore new horizons and collaborate effectively as a team.
+        </h2>
+    </p>
+    <p>
+        <h2>Holberton School Portfolio Project:
+            This project holds a special place as one of our esteemed Holberton School portfolio projects. It showcases our technical proficiency, creativity, and ability to apply the skills acquired during our rigorous curriculum. We are grateful for the guidance and support we received from our mentors and the invaluable learning experience Holberton School provided us.
+        </h2>
+    </p>
+    <p>
+        <h2>Team Members:
+            Our project would not have been possible without the collective effort and expertise of our dedicated team members. Each team member brings a unique set of skills and perspectives, contributing to the project's success. Connect with us on LinkedIn, explore our GitHub profiles, and follow us on Twitter to stay updated on our individual journeys and future endeavors.
+        </h2>
+        <p>
+            <h3>ESSIE MKEU:
+                <ul class="contact__socials">
+                <li><h4>Twitter</h4> <a href="https://twitter.com/_GR4CIOUS"><i class="uil uil-twitter"></i></a></li>
+                <li><h4>GitHub</h4><a href="https://github.com/3SSI3"><i class="uil uil-github"></i></a></li>
+                <li><h4>LinkedIn</h4><a href="https://www.linkedin.com/in/esther-mkeu-0a662a227/"><i class="uil uil-linkedin"></i></a></li>
+                </ul>
+            </h3>
+        </p>
+        <span></span>
+        <p>
+            <h3>ALEXANDER OGHENELOKOME:
+                <ul class="contact__socials">
+                    <li><h4>Twitter</h4> <a href="https://twitter.com/_GR4CIOUS"><i class="uil uil-twitter"></i></a></li>
+                    <li><h4>GitHub</h4><a href="https://github.com/3SSI3"><i class="uil uil-github"></i></a></li>
+                    <li><h4>LinkedIn</h4><a href="https://www.linkedin.com/in/esther-mkeu-0a662a227/"><i class="uil uil-linkedin"></i></a></li>
+                    </ul>
+            </h3>
+        </p>
+    </p>
+    <span></span>
+    <p>
+        <h3>GitHub Repository:</h3>
+        For a closer look at the code and technical aspects of our project, we invite you to explore our GitHub repository. It serves as a testament to our commitment, collaboration, and continuous improvement throughout the development process.
+        <li><a href="https://github.com/3SSI3/flex_ed"><i class="uil uil-github"><h4>GitHub</h4></i></a></li>
+        We are immensely proud of what we have accomplished thus far and look forward to the future endeavors that lie ahead. Thank you for joining us on this journey and being a part of our story.
+</p>
+</section>
 <!--====================== FOOTER SECTION =====================-->
 <footer>
     <div class="container footer__container">
