--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                     Elevate your learning experience with our dynamic e-learning platform. Fuel your growth and seize the opportunity to acquire valuable knowledge at your own pace. 
                 </p>
                 <a href="PHP/login.php" class="button button-primary"> Let's Get Started</a>
-                <a href="PHP/login.php" class="button button-primary"> Let's Get Started</a>
             </div>
 
             <div class="header__right">
@@ -80,19 +79,19 @@
                 <article class="category">
                     <span class="category__icon"><i class="uil uil-megaphone"></i></span>
                     <h5>Marketing</h5>
-                    <p>Unleash your creative marketing prowess and master the art of strategic communication. </p>
+                    <p>Master the art of strategic communication. </p>
                 </article>
 
                 <article class="category">
                     <span class="category__icon"><i class="uil uil-music"></i></span>
                     <h5>Music</h5>
-                    <p>Ignite your passion for music and explore a harmonious journey of creativity and expression. From theory and composition to performance and production, our music courses cater to all skill levels.</p>
+                    <p>From theory and composition to performance and production</p>
                 </article>
 
                 <article class="category">
                     <span class="category__icon"><i class="uil uil-html3"></i></span>
                     <h5>Web Development</h5>
-                    <p>Gain the knowledge and skills to build stunning websites and dynamic web applications. From front-end design to back-end programming, our web development courses cover HTML, CSS, JavaScript, and more.</p>
+                    <p>Our web development courses cover HTML, CSS, JavaScript, and more.</p>
                 </article>
 
                 <article class="category">
@@ -108,11 +107,9 @@
 <!--====================== COURSES =============================================-->>
 <section class="courses">
     <h2>Explore Our Courses</h2>
-    <h2>Explore Our Courses</h2>
     <div class="container courses__container">
         <article class="course">
             <div class="course__image">
-                <img src="./images/sales.jpeg">
                 <img src="./images/sales.jpeg">
             </div>
             <div class="course__info">
@@ -126,7 +123,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/language.jpeg">
+                <img src="./images/global languages.jpeg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -139,7 +136,6 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/html.jpeg">
                 <img src="./images/html.jpeg">
             </div>
             <div class="course__info">
@@ -229,7 +225,7 @@
         <div class="f__1">
             <a href="index.html" class="f_logo"><h2>FlexEd</h2></a>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Learn Anywhere, Anytime with ease.
             </p>
         </div>
 
