Update:hammer_and_wrench:

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--=========== NAVBAR START ===============================-->
     <nav>
         <div class="container nav__container">
-            <a href="index.html"><h4>FlexEd</h4></a>
+            <a href="index.html" class="logo"><span>Flex</span>Ed</a>
             <ul class="nav__menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -45,7 +45,7 @@
                 <p>
                     Elevate your learning experience with our dynamic e-learning platform. Fuel your growth and seize the opportunity to acquire valuable knowledge at your own pace. 
                 </p>
-                <a href="PHP/login.php" class="button button-primary"> Let's Get Started</a>
+                <a href="PHP/login.php" class="button button-primary">Let's Get Started</a>
             </div>
 
             <div class="header__right">
@@ -66,7 +66,7 @@
                 <p>
                     Whether you're a beginner seeking to build a strong skill set or an experienced professional looking to expand your knowledge, our categories section provides a pathway to success in today's fast-paced world.
                 </p>
-                <a href="#" class="button">Learn More</a>
+                <a href="PHP/login.php" class="button">Learn More</a>
             </div>
 
             <div class="categories__right">
