--- a/courses.html
+++ b/courses.html
@@ -38,7 +38,7 @@
 </nav>
 <!--================ END OF NAVBAR ==============================-->
 
-<!--======== HEADER SECTION 1========-->
+<!--======== HEADER SECTION 1========--
 <header>
     <div class="container header__container">
         <div class="header__left">
@@ -56,7 +56,7 @@
         </div>
     </div>
 </header>
-<!--=========== END OF HEADER 1-=================-->
+<!-=========== END OF HEADER 1-=================-->
 
 
 <section class="courses">
@@ -65,7 +65,7 @@
         <article class="course">
             <div class="course__image">
                 <img src="./images/sales.jpeg">
-                <img src="./images/sales.jpeg">
+                
             </div>
             <div class="course__info">
                 <h4>Affiliate Marketing</h4>
@@ -78,7 +78,6 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/language.jpeg">
                 <img src="./images/global languages.jpeg">
             </div>
             <div class="course__info">
@@ -92,7 +91,6 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/html.jpeg">
                 <img src="./images/html.jpeg">
             </div>
             <div class="course__info">
@@ -106,7 +104,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/german.jpg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -119,7 +117,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/paris.crdownload">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -132,7 +130,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/korean.jpg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -145,7 +143,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/business.jpg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -158,7 +156,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/finance1.jpg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -171,7 +169,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/warehouse.jpg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
