--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style (2).css">
+   <link rel="stylesheet" href="css/style_home.css">
 
 </head>
 <body>
