Done :heavy_check_mark:

--- a/courses.html
+++ b/courses.html
@@ -64,7 +64,7 @@
     <div class="container courses__container">
         <article class="course">
             <div class="course__image">
-                <img src="./images/sales.jpeg">
+                <img src="./images/marketing2.jpg">
                 
             </div>
             <div class="course__info">
@@ -72,72 +72,7 @@
                 <p>
                 Learn all you need to know about Affiliate marketing.
                 </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
-            </div>
-        </article>
-
-        <article class="course">
-            <div class="course__image">
-                <img src="./images/global languages.jpeg">
-            </div>
-            <div class="course__info">
-                <h4>Languages</h4>
-                <p>
-                Learn more than one Language! And even more!!!
-                </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
-            </div>
-        </article>
-
-        <article class="course">
-            <div class="course__image">
-                <img src="./images/html.jpeg">
-            </div>
-            <div class="course__info">
-                <h4>Web Devlopment</h4>
-            <p>
-                Building your own website from scratch with HTML & CSS and other programming languages.
-            </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
-            </div>
-        </article>
-
-        <article class="course">
-            <div class="course__image">
-                <img src="./images/german.jpg">
-            </div>
-            <div class="course__info">
-                <h4>Languages</h4>
-                <p>
-                Learn more than one Language! And even more!!!
-                </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
-            </div>
-        </article>
-
-        <article class="course">
-            <div class="course__image">
-                <img src="./images/paris.crdownload">
-            </div>
-            <div class="course__info">
-                <h4>Languages</h4>
-                <p>
-                Learn more than one Language! And even more!!!
-                </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
-            </div>
-        </article>
-
-        <article class="course">
-            <div class="course__image">
-                <img src="./images/korean.jpg">
-            </div>
-            <div class="course__info">
-                <h4>Languages</h4>
-                <p>
-                Learn more than one Language! And even more!!!
-                </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
             </div>
         </article>
 
@@ -146,24 +81,11 @@
                 <img src="./images/business.jpg">
             </div>
             <div class="course__info">
-                <h4>Languages</h4>
+                <h4>Business Fundamentals</h4>
                 <p>
-                Learn more than one Language! And even more!!!
+                    Introduction to the fundamental principles of business.
                 </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
-            </div>
-        </article>
-
-        <article class="course">
-            <div class="course__image">
-                <img src="./images/finance1.jpg">
-            </div>
-            <div class="course__info">
-                <h4>Languages</h4>
-                <p>
-                Learn more than one Language! And even more!!!
-                </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
             </div>
         </article>
 
@@ -172,67 +94,128 @@
                 <img src="./images/warehouse.jpg">
             </div>
             <div class="course__info">
-                <h4>Languages</h4>
-                <p>
-                Learn more than one Language! And even more!!!
-                </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
+                <h4>Operations and Supply Chain Management</h4>
+            <p>
+                Gain insight on managing production processes & optimizing supply chains
+            </p>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
             </div>
         </article>
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/german.jpg">
             </div>
             <div class="course__info">
-                <h4>Languages</h4>
+                <h4>Languages: German</h4>
                 <p>
-                Learn more than one Language! And even more!!!
+                    German Language for Beginners.
                 </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
             </div>
         </article>
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/paris.jpg">
             </div>
             <div class="course__info">
-                <h4>Languages</h4>
+                <h4>Languages: French</h4>
                 <p>
-                Learn more than one Language! And even more!!!
-                </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
+                Francais for Beginners                </p>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
             </div>
         </article>
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/korean.jpg">
             </div>
             <div class="course__info">
-                <h4>Languages</h4>
+                <h4>Languages: Korean</h4>
                 <p>
                 Learn more than one Language! And even more!!!
                 </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
             </div>
         </article>
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/music1.jpg">
             </div>
             <div class="course__info">
-                <h4>Languages</h4>
+                <h4>Podcast Production</h4>
                 <p>
-                Learn more than one Language! And even more!!!
+                    Want to start a podcast?
                 </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
             </div>
         </article>
 
-        
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/music2.jpg">
+            </div>
+            <div class="course__info">
+                <h4>Music Sheet</h4>
+                <p>
+                    Get to know how to read music Sheets.
+                </p>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/music4.jpg">
+            </div>
+            <div class="course__info">
+                <h4>Music Production</h4>
+                <p>
+                    Sound and Music production for Beginners
+                </p>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/marketing1.jpg">
+            </div>
+            <div class="course__info">
+                <h4>Leadership and Team Management</h4>
+                <p>
+                    Effective communication and strategies for building and leading high-performing teams.
+                </p>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/social1.jpg">
+            </div>
+            <div class="course__info">
+                <h4>Social Media Marketing<h4>
+                <p>
+                    Learn what you need to know about social media marketing
+                </p>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
+            </div>
+        </article>
+
+        <article class="course">
+            <div class="course__image">
+                <img src="./images/bitcoin.jpg">
+            </div>
+            <div class="course__info">
+                <h4>Virtual Money</h4>
+                <p>
+                    What is virtual money and how does it work?                </p>
+            <a href="PHP/login.php" class="button button-primary"> Learn More</a>
+            </div>
+        </article>        
 
     </div>
 </section>
