--- a/index.html
+++ b/index.html
@@ -110,40 +110,40 @@
     <div class="container courses__container">
         <article class="course">
             <div class="course__image">
-                <img src="./images/sales.jpeg">
+                <img src="./images/social1.jpg">
             </div>
             <div class="course__info">
-                <h4>Affiliate Marketing</h4>
+                <h4>Social Media Marketing</h4>
                 <p>
-                Learn all you need to know about Affiliate marketing.
+                Learn all you need to know about Social Media marketing.
                 </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
+            <a href="courses.html" class="button button-primary"> Learn More</a>
             </div>
         </article>
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/global languages.jpeg">
+                <img src="./images/world.jpg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
                 <p>
                 Learn more than one Language! And even more!!!
                 </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
+            <a href="courses.html" class="button button-primary"> Learn More</a>
             </div>
         </article>
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/html.jpeg">
+                <img src="./images/webdev.jpg">
             </div>
             <div class="course__info">
                 <h4>Web Devlopment</h4>
             <p>
                 Building your own website from scratch with HTML & CSS and other programming languages.
             </p>
-            <a href="course.html" class="button button-primary"> Learn More</a>
+            <a href="courses.html" class="button button-primary"> Learn More</a>
             </div>
         </article>
     </div>
@@ -274,6 +274,35 @@
 </script>
 <!--JAVASCRIPT LINK-->
 <script src='js/main.js'></script>
+
+
+<!--============================== CHAT BOT =================================================================================-->
+<script defer async>
+    document.addEventListener('DOMContentLoaded', function() {
+      // setting global variables
+      window.botId = 1638
+      
+      // create div with id = sarufi-chatbox
+      const div = document.createElement("div")
+      div.id = "sarufi-chatbox"
+      document.body.appendChild(div)
+  
+      // create and attach script tag
+      const script = document.createElement("script")
+      script.crossOrigin = true
+      script.type = "module"
+      script.src = "https://cdn.jsdelivr.net/gh/flexcodelabs/sarufi-chatbox/example/vanilla-js/script.js"
+      document.head.appendChild(script)
+  
+      // create and attach css
+      const style = document.createElement("link")
+      style.crossOrigin = true
+      style.rel = "stylesheet"
+      style.href = "https://cdn.jsdelivr.net/gh/flexcodelabs/sarufi-chatbox/example/vanilla-js/style.css"
+      document.head.appendChild(style)
+    });
+  </script>
+
 
 </body>
 </html
