--- a/courses.html
+++ b/courses.html
@@ -64,7 +64,7 @@
     <div class="container courses__container">
         <article class="course">
             <div class="course__image">
-                <img src="./images/marketing2.jpg">
+                <img src="./images/courses/marketing2.jpg">
                 
             </div>
             <div class="course__info">
@@ -78,7 +78,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/business.jpg">
+                <img src="./images/courses/business.jpg">
             </div>
             <div class="course__info">
                 <h4>Business Fundamentals</h4>
@@ -91,7 +91,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/warehouse.jpg">
+                <img src="./images/courses/warehouse.jpg">
             </div>
             <div class="course__info">
                 <h4>Operations and Supply Chain Management</h4>
@@ -104,7 +104,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/german.jpg">
+                <img src="./images/courses/german.jpg">
             </div>
             <div class="course__info">
                 <h4>Languages: German</h4>
@@ -117,7 +117,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/paris.jpg">
+                <img src="./images/courses/paris.jpg">
             </div>
             <div class="course__info">
                 <h4>Languages: French</h4>
@@ -129,7 +129,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/korean.jpg">
+                <img src="./images/courses/korean.jpg">
             </div>
             <div class="course__info">
                 <h4>Languages: Korean</h4>
@@ -142,7 +142,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/music1.jpg">
+                <img src="./images/courses/music1.jpg">
             </div>
             <div class="course__info">
                 <h4>Podcast Production</h4>
@@ -155,7 +155,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/music2.jpg">
+                <img src="./images/courses/music2.jpg">
             </div>
             <div class="course__info">
                 <h4>Music Sheet</h4>
@@ -168,7 +168,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/music4.jpg">
+                <img src="./images/courses/music4.jpg">
             </div>
             <div class="course__info">
                 <h4>Music Production</h4>
@@ -181,7 +181,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/marketing1.jpg">
+                <img src="./images/courses/marketing1.jpg">
             </div>
             <div class="course__info">
                 <h4>Leadership and Team Management</h4>
@@ -194,7 +194,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/social1.jpg">
+                <img src="./images/courses/social1.jpg">
             </div>
             <div class="course__info">
                 <h4>Social Media Marketing<h4>
@@ -207,7 +207,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/bitcoin.jpg">
+                <img src="./images/courses/bitcoin.jpg">
             </div>
             <div class="course__info">
                 <h4>Virtual Money</h4>
