--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
    <!-- custom css file link  -->
-   <link rel="stylesheet" href="css/style_home.css">
+   <link rel="stylesheet" href="css/user.css">
 
 </head>
 <body>
@@ -34,9 +34,9 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-1.jpg" class="image" alt="">
-         <h3 class="name">shaikh anas</h3>
-         <p class="role">studen</p>
+         <img src="images/playlist/pic-2.jpg" class="image" alt="">
+         <h3 class="name">Student's Name</h3>
+         <p class="role">student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
             <a href="login.html" class="option-btn">login</a>
@@ -55,7 +55,7 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-1.jpg" class="image" alt="">
+      <img src="images/playlist/pic-7.jpg" class="image" alt="">
       <h3 class="name">Student's name</h3>
       <p class="role">student</p>
       <a href="profile.html" class="btn">view profile</a>
@@ -113,11 +113,11 @@
          </div>
       </div>
 
-      <div class="box">
+      <!--div class="box">
          <h3 class="title">become a tutor</h3>
          <p class="tutor">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, nam?</p>
          <a href="teachers.html" class="inline-btn">get started</a>
-      </div>
+      </div-->
 
    </div>
 
@@ -133,14 +133,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/platylist/pic-2.jpg" alt="">
             <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2022</span>
+               <h3>Alfonso Picosso</h3>
+               <span>11-09-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-1.png" alt="">
+            <img src="images/playlist/thumb-1.png" alt="">
             <span>10 videos</span>
          </div>
          <h3 class="title">complete HTML tutorial</h3>
@@ -149,14 +149,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-3.jpg" alt="">
+            <img src="images/playlist/pic-3.jpg" alt="">
             <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2022</span>
+               <h3>Alfonso Picosso</h3>
+               <span>11-09-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-2.png" alt="">
+            <img src="images/playlist/thumb-2.png" alt="">
             <span>10 videos</span>
          </div>
          <h3 class="title">complete CSS tutorial</h3>
@@ -165,14 +165,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-4.jpg" alt="">
+            <img src="images/playlist/pic-4.jpg" alt="">
             <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2022</span>
+               <h3>Alfonso Picosso</h3>
+               <span>11-09-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-3.png" alt="">
+            <img src="images/playlist/thumb-3.png" alt="">
             <span>10 videos</span>
          </div>
          <h3 class="title">complete JS tutorial</h3>
@@ -181,14 +181,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-5.jpg" alt="">
+            <img src="images/playlist/pic-5.jpg" alt="">
             <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2022</span>
+               <h3>Alfonso Picosso</h3>
+               <span>11-09-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-4.png" alt="">
+            <img src="images/playlist/thumb-4.jpeg" alt="">
             <span>10 videos</span>
          </div>
          <h3 class="title">complete Boostrap tutorial</h3>
@@ -197,14 +197,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-6.jpg" alt="">
+            <img src="images/playlist/pic-6.jpg" alt="">
             <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2022</span>
+               <h3>Alfonso Picosso</h3>
+               <span>11-09-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-5.png" alt="">
+            <img src="images/playlist/thumb-5.png" alt="">
             <span>10 videos</span>
          </div>
          <h3 class="title">complete JQuery tutorial</h3>
@@ -213,14 +213,14 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-7.jpg" alt="">
+            <img src="images/playlist/pic-7.jpg" alt="">
             <div class="info">
-               <h3>john deo</h3>
-               <span>21-10-2022</span>
+               <h3>Alfonso Picosso</h3>
+               <span>11-09-2023</span>
             </div>
          </div>
          <div class="thumb">
-            <img src="images/thumb-6.png" alt="">
+            <img src="images/playlist/thumb-6.jpeg" alt="">
             <span>10 videos</span>
          </div>
          <h3 class="title">complete SASS tutorial</h3>
