--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container nav__container">
             <a href="index.html" class="logo"><span>Flex</span>Ed</a>
             <ul class="nav__menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -41,7 +41,7 @@
     <header>
         <div class="container header__container">
             <div class="header__left">
-                <h1>Learn anytime, Anywhere with ease.</h1>
+                <h1><span>Learn anytime, Anywhere with ease.</span></h1>
                 <p>
                     Elevate your learning experience with our dynamic e-learning platform. Fuel your growth and seize the opportunity to acquire valuable knowledge at your own pace. 
                 </p>
@@ -104,13 +104,13 @@
     </section>
 <!--====================== END OF CATEGORIES SECTION=======================-->
 
-<!--====================== COURSES =============================================-->>
+<!--====================== COURSES =============================================-->
 <section class="courses">
     <h2>Explore Our Courses</h2>
     <div class="container courses__container">
         <article class="course">
             <div class="course__image">
-                <img src="./images/social1.jpg">
+                <img src="./images/courses/social1.jpg">
             </div>
             <div class="course__info">
                 <h4>Social Media Marketing</h4>
@@ -123,7 +123,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/world.jpg">
+                <img src="./images/courses/world.jpg">
             </div>
             <div class="course__info">
                 <h4>Languages</h4>
@@ -136,7 +136,7 @@
 
         <article class="course">
             <div class="course__image">
-                <img src="./images/webdev.jpg">
+                <img src="./images/courses/webdev.jpg">
             </div>
             <div class="course__info">
                 <h4>Web Devlopment</h4>
@@ -207,7 +207,7 @@
         <article class="faq">
             <div class="faq__icon"><i class="uil uil-plus-circle"></i></div>
             <div class="qn__ans">
-                <h4>Are the courses offered for free?</h4>
+                <h4>Can we learn with the help of tutors?</h4>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis sapiente neque dicta, nulla consequatur distinctio, voluptates non magnam id repudiandae eveniet accusamus et animi sequi labore laborum voluptatibus! Quas, culpa.
                     </p>
@@ -252,7 +252,9 @@
             <h4>Contacts</h4>
             <div>
                 <p>+255123456789</p>
-                <p>essie77@gmail.com</p>
+                <p>starsm004@gmail.com</p>
+                <p>+234123456789</p>
+                <p>osigelialex@gmail.com</p>
             </div>
         </div>
 
